...
    },
    "home.allBookmarks": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "すべてのブックマーク"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "All Bookmarks"
...
    },
    "icon.tech": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "テック"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Tech"
...
    },
    "bookmark.detail.aiSummary": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "AI 要約"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "AI Summary"
...
